kubernetes/main/apps/system/spegel/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: spegel
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: spegel
  ingress:
    # Other spegel pods
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: spegel
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
            - port: "5001"
              protocol: TCP

    # Prometheus
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: "TCP"
  egress:
    # Other spegel pods
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: spegel
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
            - port: "5001"
              protocol: TCP
